--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,12 @@
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">That is, the data stored in localStorage persists until explicitly deleted. Changes made are saved and available for all current and future visits to the site. For sessionStorage, changes are only available per tab. Changes made are saved and available for the current page in that tab until it is closed. Once it is closed, the stored data is deleted.
+                        <div class="accordion-body">
+                            That is, the data stored in localStorage persists until explicitly
+                            deleted. Changes made are saved and available for all current and future visits to the site.
+                            For sessionStorage, changes are only available per tab. Changes made are saved and available
+                            for the current page in that tab until it is closed. Once it is closed, the stored data is
+                            deleted.
                         </div>
                     </div>
                 </div>
@@ -79,14 +84,16 @@
                     <h2 class="accordion-header" id="flush-headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            Accordion Item #2
+                            difference between global scope and block scope
                         </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion
-                            body. Let's imagine this being filled with some actual content.</div>
+                        <div class="accordion-body">
+                            Before ES6 (2015), JavaScript had only Global Scope and Function Scope. ES6 introduced two
+                            important new JavaScript keywords: let and const. These two keywords provide Block Scope in
+                            JavaScript. Variables declared inside a { } block cannot be accessed from outside the block. and A variable declared outside a function, becomes GLOBAL.
+                        </div>
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -94,16 +101,14 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseThree" aria-expanded="false"
                             aria-controls="flush-collapseThree">
-                            Accordion Item #3
+                            how to work javascript event loop
                         </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
-                            body. Nothing more exciting happening here in terms of content, but just filling up the
-                            space to make it look, at least at first glance, a bit more representative of how this would
-                            look in a real-world application.</div>
+                        <div class="accordion-body">The event loop is the secret behind JavaScript's asynchronous 
+                            programming. JS executes all operations on a single thread, but using a 
+                            few smart data structures, it gives us the illusion of multi-threading.</div>
                     </div>
                 </div>
                 <div class="accordion-item">
