blog page complete

--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,8 @@
                         <div class="accordion-body">
                             Before ES6 (2015), JavaScript had only Global Scope and Function Scope. ES6 introduced two
                             important new JavaScript keywords: let and const. These two keywords provide Block Scope in
-                            JavaScript. Variables declared inside a { } block cannot be accessed from outside the block. and A variable declared outside a function, becomes GLOBAL.
+                            JavaScript. Variables declared inside a { } block cannot be accessed from outside the block.
+                            and A variable declared outside a function, becomes GLOBAL.
                         </div>
                     </div>
                 </div>
@@ -106,8 +107,8 @@
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">The event loop is the secret behind JavaScript's asynchronous 
-                            programming. JS executes all operations on a single thread, but using a 
+                        <div class="accordion-body">The event loop is the secret behind JavaScript's asynchronous
+                            programming. JS executes all operations on a single thread, but using a
                             few smart data structures, it gives us the illusion of multi-threading.</div>
                     </div>
                 </div>
@@ -116,16 +117,15 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseFour" aria-expanded="false"
                             aria-controls="flush-collapseFour">
-                            Accordion Item #4
+                            how much way to get undefined in javascript
                         </button>
                     </h2>
                     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
-                            body. Nothing more exciting happening here in terms of content, but just filling up the
-                            space to make it look, at least at first glance, a bit more representative of how this would
-                            look in a real-world application.</div>
+                        <div class="accordion-body">get undefined value when you call a non-existent property or method
+                            of an object. In the above example, a function Sum does not return any result but still we
+                            try to assign its resulted value to a variable. So in this case, result will be undefined.
+                        </div>
                     </div>
                 </div>
             </div>
