--- a/blog.html
+++ b/blog.html
@@ -72,11 +72,9 @@
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            That is, the data stored in localStorage persists until explicitly
-                            deleted. Changes made are saved and available for all current and future visits to the site.
-                            For sessionStorage, changes are only available per tab. Changes made are saved and available
-                            for the current page in that tab until it is closed. Once it is closed, the stored data is
-                            deleted.
+                            session storage store one time. and local storage store permanently. local storage approved
+                            10mb storage. session storage items gone when we close tab. but local store keep them
+                            whatever we do in tab.
                         </div>
                     </div>
                 </div>
@@ -90,10 +88,9 @@
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            Before ES6 (2015), JavaScript had only Global Scope and Function Scope. ES6 introduced two
-                            important new JavaScript keywords: let and const. These two keywords provide Block Scope in
-                            JavaScript. Variables declared inside a { } block cannot be accessed from outside the block.
-                            and A variable declared outside a function, becomes GLOBAL.
+                            is anywhere we use variable that is global scope. and in the particual section we use block
+                            scope. like function variable, if-else variable, loop variable there we use in this place.
+                            and global scope not in depend of any block area.
                         </div>
                     </div>
                 </div>
@@ -108,8 +105,8 @@
                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">The event loop is the secret behind JavaScript's asynchronous
-                            programming. JS executes all operations on a single thread, but using a
-                            few smart data structures, it gives us the illusion of multi-threading.</div>
+                            programming. JS executes all operations on a single thread, but using a few smart data
+                            structures, it gives us the illusion of multi-threading.</div>
                     </div>
                 </div>
                 <div class="accordion-item">
